@@ -14,11 +14,11 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: var.test,v 1.19 2002/07/15 22:18:08 msofer Exp $
+# RCS: @(#) $Id: var.test,v 1.20 2002/10/17 17:41:45 dgp Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
-    package require tcltest
+    package require tcltest 2.2
     namespace import -force ::tcltest::*
 }
 
@@ -665,6 +665,10 @@ test var-13.1 {Tcl_UnsetVar2, unset array with trace set on element} {
     }
     set x "If you see this, it worked"
 } "If you see this, it worked"
+
+test var-14.1 {array names syntax} -body {
+    array names foo bar baz snafu
+} -returnCodes 1 -match glob -result *
 
 catch {namespace delete ns}
 catch {unset arr}
